--- a/adder/Cargo.toml
+++ b/adder/Cargo.toml
@@ -2,6 +2,8 @@
 name = "adder"
 version = "0.0.2"
 edition = "2021"
+description = ["Test cargo workpaces publish"]
+license = ["MIT"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
