--- a/adder/Cargo.toml
+++ b/adder/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "adder"
-version = "0.0.2"
+version = "0.0.4"
 edition = "2021"
-description = ["Test cargo workpaces publish"]
-license = ["MIT"]
+description = "Test cargo workpaces publish adder"
+license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
